<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:contentPaddingBottom="12dp"
    card_view:cardElevation="0dp"
    app:contentPaddingLeft="16dp"
    app:contentPaddingRight="16dp"
    app:contentPaddingTop="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkboxDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:button="@drawable/checkbox_selection"
            android:checked="false"
            app:buttonTint="@null"
            android:minWidth="0dp"
            android:minHeight="0dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="14dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="3dp"
                android:background="@drawable/ic_high_priority"
                android:maxWidth="10dp"
                android:maxHeight="16dp"
                android:visibility="visible"
                android:contentDescription="@string/priority" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/todoDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginStart="3dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto"
                    android:maxLines="3"
                    android:minLines="1"
                    android:scrollHorizontally="false"
                    android:text="@string/new_item"
                    android:textColor="?attr/colorLabelPrimary" />

                <TextView
                    android:id="@+id/tvDeadline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:layout_weight="1"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="2dp"
                    android:layout_gravity="top"
                    android:textColor="?attr/colorGray"
                    android:layout_marginBottom="1dp"
                    android:visibility="gone"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/todoItemInfoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/item_info"
            android:minWidth="20dp"
            android:minHeight="20dp"
            app:srcCompat="@drawable/ic_info" />
    </LinearLayout>
</androidx.cardview.widget.CardView>