<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:padding="8dp">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true"

        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/Title"
            app:expandedTitleMarginBottom="52dp"
            app:expandedTitleMarginStart="58dp"
            app:expandedTitleTextAppearance="@style/LargeTitle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fontFamily="@font/roboto_medium"
            app:titleCollapseMode="scale">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:title="@string/my_todo_items"
                android:fontFamily="@font/roboto_medium">

            </com.google.android.material.appbar.MaterialToolbar>


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/changeVisibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="20.5dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_visible" />

            <TextView
                android:id="@+id/numberOfDoneTodo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="60dp"
                android:layout_marginBottom="18dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/number_of_done_todo"
                android:textColor="?attr/colorLabelTertiary"
                android:textSize="16sp"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondary"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todoListRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:background="?attr/colorSecondary"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/todo_item" />


    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAddTodoItem"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/color_dark_blue"
        android:clickable="true"
        android:contentDescription="@string/add_new_to_do_item"
        android:elevation="18dp"
        android:focusable="true"
        android:src="@drawable/ic_add"

        app:shapeAppearanceOverlay="@style/FloatingActionButtonStyle"

        app:tint="@color/color_light_white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>